Fix alignment of remember me

--- a/landmapper/app/static/landmapper/css/auth.css
+++ b/landmapper/app/static/landmapper/css/auth.css
@@ -25,6 +25,11 @@ input {
     width: 100%;
 }
 
+input[type="checkbox"] {
+    width: 1rem;
+    height: 1rem;
+}
+
 form#signup_form,
 form.password_reset, 
 form.login {
